<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="usernameHint">用户名</string>
    <string name="passwordHint">密码</string>
    <string name="loginButton">登陆</string>
    <string name="sign_up">注册</string>

    <string name="parse_app_id">G9qXUTYhGsga9t8FmKz0fDg7aT5ZS3q47zgVScZ4</string>
    <string name="parse_client_key">o8w1BC89HW5gY7ijo5Hqs2AJrXH4HKnne2ScekNa</string>
    <string name="signup_username">Username</string>
    <string name="signup_password">Password</string>
    <string name="signup_email">Email</string>
    <string name="signup_error_title">错误</string>
    <string name="signup_error_message">所有均为必填项</string>

    <string name="login_error_title">错误</string>
    <string name="login_error_message">用户名和密码必填</string>

    <string name="action_logout">退出登陆</string>

</resources>


