<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.agoodob.myapplication.SignUpActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signUpUsernameField"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/signup_username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signUpPasswordField"
        android:layout_below="@+id/signUpUsernameField"
        android:layout_centerHorizontal="true"
        android:hint="@string/signup_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/signUpEmailField"
        android:layout_below="@+id/signUpPasswordField"
        android:layout_centerHorizontal="true"
        android:hint="@string/signup_email"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/signUpButton"
        android:layout_below="@+id/signUpEmailField"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
